- Docs contract now also enforces immutable-release checklist references to `CHANGELOG.md` and `docs/RELEASE_NOTES.txt`.
- Docs contract now also enforces release-announcement workflow/managed-verify references (`docs/RELEASE_ANNOUNCEMENT.txt`).
- Release bundle contract test now enforces `CHANGELOG.md` inclusion in release-zip staging and release-sidecar outputs.
- Added Green Team `verify_360` docs-sync contract test to pin `CHANGELOG.md` + release announcement target coverage.
- Emergency verify report path now preserves policy context lines (`policy.*`) so fail-closed receipts remain operator-readable under write-path fallback.
- Safe-run now enforces a non-blocking evidence corridor check before completion:
- Expected receipt artifacts are verified for presence and digest consistency.
- Pre-existing/stale unmanaged output files anywhere under the run out-root are flagged as orphan evidence.
- Analysis still completes; warnings are recorded deterministically in `operator_receipt.json` (`SAFE_RUN_EVIDENCE_*` codes).
- Added explicit smoke-test coverage for root-level stale output detection under the same non-blocking evidence-corridor behavior.
- `operator_receipt.json` now includes additive digest links for `weftend/README.txt` and run sub-receipts (`analysis/*`, `host/*`) to strengthen evidence-chain traceability.
- Universal artifact adapter expansion (analysis-only, deterministic, fail-closed):
- New safe-run adapter flags: `--adapter auto|none|archive|package|extension|iac|cicd|document|container|image|scm|signature`
- Optional repeatable plugin flag: `--enable-plugin <name>` (explicit local plugin use only)
- New adapter discovery command: `weftend adapter list`
- New adapter maintenance/health command: `weftend adapter doctor`
- Added readable doctor mode: `weftend adapter doctor --text` (deterministic local guidance, no auto-install/network).