@@ -52,6 +52,7 @@ Any correction, hardening pass, or follow-up change is recorded in a newer chang
 - Extended docs release contract coverage to enforce immutable-release checklist references (`CHANGELOG.md`, `docs/RELEASE_NOTES.txt`).
 - Extended docs release contract coverage to enforce release announcement workflow/managed-verify references.
 - Extended release bundle contract coverage to enforce `CHANGELOG.md` in packaging/checklist outputs.
+- Extended release bundle contract coverage to enforce sidecar parity for release notes/announcement/quickstart/checklist outputs.
 - Added Green Team contract test for `verify_360` docs-sync target coverage (`CHANGELOG.md`, release announcement, release notes).
 - `verify:360:harness` now validates strict-mode idempotence separation (`NEW` then `REPLAY`) to prevent strict/non-strict replay-key regression.
 - Emergency verify report output now includes policy summary lines (`policy.*`) and failure receipts carry interpreted policy fields for consistent fail-closed readability.
